force-app/main/default/objects/p2s_base1__CustomerPath__c/p2s_base1__CustomerPath__c.object-meta.xml
<CustomObject>
    <label>Journey</label>
    <nameField>
        <displayFormat>CP.{YYYYMMDD}.{00000}</displayFormat>
        <label>Journey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journeys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>