force-app/main/default/objects/p2s_base1__CustomerPath__c/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <formula>IF(
NOT(ISBLANK(p2s_base1__Opportunity__c )),
TEXT(p2s_base1__Opportunity__r.Account.Legal_Tier_Split__c),
TEXT(p2s_base1__Account__r.Legal_Tier_Split__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Tier</label>
    <type>Text</type>
</CustomField>