force-app/main/default/objects/p2s_base1__CustomerPath__c/fields/p2s_base1__Attributed__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Attributed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The attribution job will check this box when it is finished attribution the customer path record.  Clearing this flag will cause all related CampaignAttribution records to be removed and the Attribution job will rescore the Customer Path record.</description>
    <inlineHelpText>The attribution job will check this box when it is finished attribution the customer path record.  Clearing this flag will cause all related CampaignAttribution records to be removed and the Attribution job will rescore the Customer Path record.</inlineHelpText>
    <label>Attributed</label>
    <type>Checkbox</type>
</CustomField>