force-app/main/default/objects/p2s_base1__CustomerPath__c/fields/p2s_base1__DaysSpent__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__DaysSpent__c</fullName>
    <formula>p2s_base1__TransitionDateTime__c -  p2s_base1__PreviousTransitionDateTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>