force-app/main/default/objects/p2s_base1__CustomerPath__c/fields/p2s_base1__Detail__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Detail__c</fullName>
    <label>Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>