force-app/main/default/objects/p2s_base1__CustomerPath__c/fields/p2s_base1__EngagementActivityInfluence__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__EngagementActivityInfluence__c</fullName>
    <formula>IF(
p2s_base1__EngagioActivityTouches__c &gt; 0,
TRUE,
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Activity Influence</label>
    <type>Checkbox</type>
</CustomField>