force-app/main/default/objects/p2s_base1__CustomerPath__c/fields/p2s_base1__FromLifecycleStage__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__FromLifecycleStage__c</fullName>
    <description>This was the journey stage of the customer record before the change of the journey stage</description>
    <inlineHelpText>This was the journey stage of the customer record before the change of the journey stage</inlineHelpText>
    <label>From Journey Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Engagement</fullName>
                <color>#0B6FCE</color>
                <label>No Engagement</label>
            </value>
            <value>
                <fullName>Intent</fullName>
                <color>#78C953</color>
                <label>Intent</label>
            </value>
            <value>
                <fullName>Aware</fullName>
                <color>#E27001</color>
                <label>Aware</label>
            </value>
            <value>
                <fullName>MQA</fullName>
                <color>#A845DC</color>
                <label>MQA</label>
            </value>
            <value>
                <fullName>Meeting</fullName>
                <color>#F3D904</color>
                <label>Meeting</label>
            </value>
            <value>
                <fullName>Inactive Opp</fullName>
                <color>#A53711</color>
                <label>Inactive Opp</label>
            </value>
            <value>
                <fullName>Open Opp</fullName>
                <color>#66E9BD</color>
                <label>Open Opp</label>
            </value>
            <value>
                <fullName>Customer</fullName>
                <color>#0B24BE</color>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Intent - Customer</fullName>
                <color>#419249</color>
                <label>Intent - Customer</label>
            </value>
            <value>
                <fullName>Aware - Customer</fullName>
                <color>#B6E32E</color>
                <label>Aware - Customer</label>
            </value>
            <value>
                <fullName>MQA - Customer</fullName>
                <color>#641CCF</color>
                <label>MQA - Customer</label>
            </value>
            <value>
                <fullName>Opp - Customer</fullName>
                <color>#F96FB7</color>
                <label>Opp - Customer</label>
            </value>
            <value>
                <fullName>Win - Customer</fullName>
                <color>#2F5D85</color>
                <label>Win - Customer</label>
            </value>
            <value>
                <fullName>Opportunity Created</fullName>
                <color>#AFCADF</color>
                <label>Opportunity Created</label>
            </value>
            <value>
                <fullName>Closed Won</fullName>
                <color>#8F6429</color>
                <label>Closed Won</label>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
                <color>#EFAE73</color>
                <label>Closed Lost</label>
            </value>
            <value>
                <fullName>Not in Model</fullName>
                <color>#57F17C</color>
                <label>Not in Model</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>