force-app/main/default/objects/p2s_base1__CustomerPath__c/fields/p2s_base1__Lead__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>CustomerPath</relationshipName>
    <type>Lookup</type>
</CustomField>