force-app/main/default/objects/p2s_base1__CustomerPath__c/fields/p2s_base1__RecordLink__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__RecordLink__c</fullName>
    <formula>HYPERLINK(&quot;../&quot; &amp; Id, p2s_base1__RecordLabel__c, &quot;_top&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>