force-app/main/default/objects/p2s_base1__CustomerPath__c/fields/p2s_base1__ReferenceLead__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__ReferenceLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Customer_Paths</relationshipName>
    <type>Lookup</type>
</CustomField>