force-app/main/default/objects/p2s_base1__CustomerPath__c/fields/p2s_base1__ReferenceOpportunity__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__ReferenceOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Customer_Paths</relationshipName>
    <type>Lookup</type>
</CustomField>