force-app/main/default/objects/p2s_base1__CustomerPath__c/fields/p2s_base1__Scored__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Scored__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether the CampaignAttribution__c records have been scored for this CustomerPath__c record</description>
    <inlineHelpText>Determines whether the CampaignAttribution__c records have been scored for this CustomerPath__c record</inlineHelpText>
    <label>Scored</label>
    <type>Checkbox</type>
</CustomField>