force-app/main/default/objects/p2s_base1__CustomerPath__c/fields/p2s_base1__Summarized__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Summarized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be set to false until the customer path record is summarized to the Path Statistics</description>
    <inlineHelpText>This field will be set to false until the customer path record is summarized to the Path Statistics</inlineHelpText>
    <label>Summarized</label>
    <type>Checkbox</type>
</CustomField>