force-app/main/default/objects/p2s_base1__CustomerPath__c/fields/Recurring_Change_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Change_Amount__c</fullName>
    <formula>p2s_base1__Opportunity__r.Maintenance_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring Change Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>